--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,12 @@ body {
 
 /* ширина контейнера */
 .conteiner {
+  margin-left: auto;
+  margin-right: auto;
   width: 1200;
   padding-left: 15px;
   padding-right: 15px;
+  outline: 2px solid green;
 }
 
 /* общие сбросы */
@@ -91,10 +94,6 @@ p {
 }
 
 /* категории */
-.site-nav {
-  display: flex;
-  margin-left: 85px;
-}
 .site-nav .link {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -107,23 +106,28 @@ p {
   line-height: 16px;
   letter-spacing: 0.02em;
 }
+
+/* контейнер навигации */
+.site-nav {
+  display: flex;
+  margin-left: 85px;
+}
 .site-nav .item + .item {
   margin-left: 50px;
 }
-.site-nav .link:hover,
-.site-nav .link:focus {
-  color: var(--accent-color);
-}
-
-.site-nav .link.current {
-  color: var(--accent-color);
-}
-
-/* Main-nav */
 .main-nav {
   display: flex;
   align-items: center;
   margin-right: auto;
+}
+
+/* ховер навигации */
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--accent-color);
+}
+.site-nav .link.current {
+  color: var(--accent-color);
 }
 
 /* контакты в шапке */
@@ -144,6 +148,7 @@ p {
   color: var(--accent-color);
 }
 
+/* контейнер адрес */
 .contacts .item + .item {
   margin-left: 50px;
 }
@@ -166,6 +171,8 @@ p {
   color: var(--hero-white-color);
   margin-bottom: 30px;
 }
+
+/* кнопка заказать и подписаться */
 .button {
   color: var(--hero-white-color);
   background-color: var(--accent-color);
@@ -325,16 +332,17 @@ p {
   color: rgba(255, 255, 255, 0.4);
 }
 
-/*скрытый заголовок портфолио */
-.portfolio-title-hidden {
-  display: none;
-}
 .text-aside {
   font-style: normal;
   font-weight: bold;
   font-size: 18px;
   line-height: 36px;
   letter-spacing: 0.06em;
+}
+
+/* скрытый заголовок портфолио */
+.portfolio-title-hidden {
+  display: none;
 }
 .portfolio .portfolio-button {
   font-family: Roboto, sans-serif;
@@ -345,6 +353,17 @@ p {
   color: var(--primary-title-color);
   background-color: var(--section-background-color);
 }
+.portfolio-button {
+  margin-bottom: 50px;
+}
+
+.btn-item {
+  margin-left: 8px;
+}
+.btn-item:first-child {
+  margin-left: 0;
+}
+
 .portfolio-button:hover,
 .portfolio-button:focus {
   color: var(--button-white-text);
@@ -379,10 +398,25 @@ p {
   color: var(--button-white-text);
   background-color: var(--accent-color);
 }
-.portfolio-box {
-  display: inline-block;
-  margin-bottom: 94px;
+
+/* портфолио контейнер */
+.portfolio {
+  display: flex;
+  flex-wrap: wrap;
 }
-.portfolio-button {
-  margin-bottom: 50px;
+.portfolio .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.portfolio .item:nth-child(3n) {
+  margin-right: 0;
+}
+.portfolio .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+.portfolio-box {
+  margin-bottom: 94px;
+  display: block;
 }
