--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body {
 .conteiner {
   margin-left: auto;
   margin-right: auto;
-  width: 1200;
+  width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
   outline: 2px solid green;
@@ -107,6 +107,9 @@ p {
   letter-spacing: 0.02em;
 }
 
+.header-portfolio {
+  margin-bottom: 94px;
+}
 /* контейнер навигации */
 .site-nav {
   display: flex;
@@ -159,6 +162,7 @@ p {
 /* герой */
 .hero {
   text-align: center;
+  margin-bottom: 94px;
 }
 
 .hero-title {
@@ -190,18 +194,16 @@ p {
 /* секция преимущества */
 .features-list {
   display: flex;
-  flex-wrap: wrap;
-}
-.features-list .item {
-  width: 270px;
-}
 
+  margin-bottom: 94px;
+}
+.features-list .item + .item {
+  margin-left: 30px;
+}
 .features-title-hidden {
   display: none;
 }
-.features {
-  padding-top: 94px;
-}
+
 .features .features-title {
   font-style: normal;
   font-weight: bold;
@@ -209,6 +211,10 @@ p {
   line-height: 16px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+}
+.features-title {
+  padding-top: 30px;
+  padding-bottom: 10px;
 }
 .features .features-text {
   color: var(--secondary-text-color);
@@ -225,6 +231,7 @@ p {
   font-size: 36px;
   line-height: 42px;
   letter-spacing: 0.03em;
+  text-align: center;
 }
 .section-activity .activity-subtitle {
   color: var(--hero-white-color);
@@ -239,14 +246,25 @@ p {
   margin-bottom: 50px;
 }
 .section-activity {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  margin-bottom: 94px;
 }
-
+.activity-list {
+  display: flex;
+  justify-content: center;
+}
+.activity-list .item + .item {
+  width: 370px;
+  margin-left: 30px;
+}
+.activity-list .item {
+  text-align: center;
+}
 /* секция команда */
 .section-team {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  margin-bottom: 94px;
+}
+.team-list {
+  display: flex;
 }
 .section-team .team-title {
   font-style: normal;
@@ -255,6 +273,7 @@ p {
   line-height: 42px;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
+  text-align: center;
 }
 .section-team .team-name {
   font-style: normal;
@@ -295,8 +314,12 @@ p {
 }
 .clients-title {
   margin-bottom: 50px;
+  text-align: center;
 }
-
+.clients-list {
+  display: flex;
+  justify-content: center;
+}
 /* футер */
 .address-footer {
   font-style: normal;
@@ -344,7 +367,13 @@ p {
 .portfolio-title-hidden {
   display: none;
 }
-.portfolio .portfolio-button {
+/* фильтр */
+.btn {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+.btn .portfolio-button {
   font-family: Roboto, sans-serif;
   font-weight: 500;
   font-size: 16px;
@@ -353,10 +382,6 @@ p {
   color: var(--primary-title-color);
   background-color: var(--section-background-color);
 }
-.portfolio-button {
-  margin-bottom: 50px;
-}
-
 .btn-item {
   margin-left: 8px;
 }
@@ -404,6 +429,7 @@ p {
   display: flex;
   flex-wrap: wrap;
 }
+
 .portfolio .item {
   width: 370px;
   margin-right: 30px;
@@ -412,11 +438,9 @@ p {
 .portfolio .item:nth-child(3n) {
   margin-right: 0;
 }
-.portfolio .item:nth-last-child(-n + 3) {
+.portfolio .item:nth-child(-n + 3) {
   margin-bottom: 0;
 }
-
-.portfolio-box {
+.conteiner .portfolio {
   margin-bottom: 94px;
-  display: block;
 }
