--- a/css/style.css
+++ b/css/style.css
@@ -21,13 +21,14 @@ html {
 :root {
   --primary-title-color: #212121;
   --secondary-text-color: #757575;
-  --primary-background-color: #e5e5e5;
+  --primary-background-color: #ffffff; /*изменить на #ffffff */
   --accent-color: #2196f3;
   --section-background-color: #f5f4fa;
   --header-background-color: #ffffff;
   --hero-white-color: #ffffff;
   --portfolio-background: rgba(33, 150, 243, 0.9);
   --button-white-text: #ffffff;
+  --fotter-background-color: #2F303A;
 }
 
 body {
@@ -43,8 +44,7 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  outline: 2px solid green;
-}
+  }
 
 /* общие сбросы */
 .link {
@@ -70,7 +70,11 @@ p {
   margin-top: 0;
   margin-bottom: 0;
 }
+/* черта под шапкой */
 
+.header {
+  border-bottom: 1px solid #ECECEC;;
+}
 /* лого */
 .logo {
   display: block;
@@ -107,9 +111,6 @@ p {
   letter-spacing: 0.02em;
 }
 
-.header-portfolio {
-  margin-bottom: 94px;
-}
 /* контейнер навигации */
 .site-nav {
   display: flex;
@@ -138,6 +139,7 @@ p {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
+  
 
   color: var(--secondary-text-color);
   font-style: normal;
@@ -160,12 +162,24 @@ p {
 }
 
 /* герой */
-.hero {
+.hero {  
+  max-width: 1600px;
+  margin-left: auto;
+  margin-right: auto;
   text-align: center;
-  margin-bottom: 94px;
-}
+  }
 
+.conteiner-hero {
+  padding-top: 200px;
+  padding-bottom: 280px;
+  padding-left: 452px;
+  padding-right: 452px;
+  background-color: var(--secondary-text-color);
+  }
+
+/* заголовок герой */
 .hero-title {
+  margin-bottom: 30px;
   font-style: normal;
   font-weight: 900;
   font-size: 44px;
@@ -173,9 +187,8 @@ p {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-white-color);
-  margin-bottom: 30px;
-}
-
+  }
+  
 /* кнопка заказать и подписаться */
 .button {
   color: var(--hero-white-color);
@@ -187,23 +200,27 @@ p {
   letter-spacing: 0.06em;
   min-width: 200px;
   padding: 10px 32px;
-  border-radius: 3px;
+  border-radius: 4px;
   text-align: center;
 }
 
 /* секция преимущества */
 .features-list {
-  display: flex;
+  display: flex;  
+  padding-top:94px;
+  padding-bottom: 94px;
+  }
 
-  margin-bottom: 94px;
-}
 .features-list .item + .item {
   margin-left: 30px;
 }
+
+/* скрытый заголовок секции */
 .features-title-hidden {
   display: none;
 }
 
+/* заголовки секции */
 .features .features-title {
   font-style: normal;
   font-weight: bold;
@@ -216,6 +233,7 @@ p {
   padding-top: 30px;
   padding-bottom: 10px;
 }
+/* описание под заголовком */
 .features .features-text {
   color: var(--secondary-text-color);
   font-style: normal;
@@ -223,8 +241,20 @@ p {
   line-height: 24px;
   letter-spacing: 0.03em;
 }
+/* позиционирование картинок */
+.features-img {
+  display: flex;
+  width: 270px;
+  height: 120px;
+  background: var(--section-background-color);
+  border-radius: 4px;
+  justify-content: center;
+}
 
-/* секция деятельность */
+/* секция чем мы занимаемся */
+.section-activity.conteiner {
+  padding-bottom: 94px;
+  }
 .section-activity .activity-title {
   font-style: normal;
   font-weight: bold;
@@ -245,26 +275,30 @@ p {
 .activity-title {
   margin-bottom: 50px;
 }
-.section-activity {
-  margin-bottom: 94px;
-}
 .activity-list {
   display: flex;
   justify-content: center;
 }
-.activity-list .item + .item {
-  width: 370px;
+.activity-list .item {
+  width: calc((100% - 60px) / 3 );
   margin-left: 30px;
+}
+.activity-list .item:nth-last-child(3n) {
+  margin-left: 0;
 }
 .activity-list .item {
   text-align: center;
+  background-color: rgba(47, 48, 58, 0.8);;
 }
 /* секция команда */
-.section-team {
-  margin-bottom: 94px;
+.section-team .conteiner {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: var(--section-background-color);                                     
 }
+
 .team-list {
-  display: flex;
+  display: flex;    
 }
 .section-team .team-title {
   font-style: normal;
@@ -275,12 +309,19 @@ p {
   margin-bottom: 50px;
   text-align: center;
 }
+.team-list .item + .item {
+  margin-left: 30px;
+}
+.team-list .item {
+  text-align: center;
+}
 .section-team .team-name {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
+  text-align: center
 }
 .section-team .team-aside {
   color: var(--secondary-text-color);
@@ -300,6 +341,7 @@ p {
 .team-aside {
   margin-bottom: 16px;
 }
+ 
 /* клиенты */
 .section-clients .clients-title {
   font-style: normal;
@@ -307,6 +349,10 @@ p {
   font-size: 36px;
   line-height: 42px;
   letter-spacing: 0.03em;
+}
+.section-clients .conteiner {
+  padding-top: 94px;
+  padding-bottom: 94px;
 }
 .clients-list .list:hover,
 .clients-list .list:focus {
@@ -320,14 +366,40 @@ p {
   display: flex;
   justify-content: center;
 }
+/* позиционирование картинок */
+.features-img {
+  width: 170px;
+  height: 90px;
+  }
+
+  .clients-list .item {
+  width: calc((100% - 30px * 4) / 5);
+  margin-right: 30px;
+}
 /* футер */
+.footer .conteiner {
+  max-width: 1600px;
+  padding-top: 72px;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: var(--fotter-background-color);
+  justify-content: space-between;
+  align-items: baseline;
+}
+.footer .button {
+  display: block;
+}
+/* адрес в футере */
 .address-footer {
+  display: flex;
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--hero-white-color);
+  flex-direction: column;  
 }
 .address-footer .contacts {
   color: rgba(255, 255, 255, 0.6);
@@ -362,17 +434,21 @@ p {
   line-height: 36px;
   letter-spacing: 0.06em;
 }
-
+.portfolio-gallery .conteiner{
+  padding-top: 94px;
+  padding-bottom: 94px;
+  }
 /* скрытый заголовок портфолио */
 .portfolio-title-hidden {
   display: none;
 }
 /* фильтр */
 .btn {
-  display: flex;
-  justify-content: center;
   margin-bottom: 50px;
-}
+  display: flex;
+  justify-content: center;  
+  }
+
 .btn .portfolio-button {
   font-family: Roboto, sans-serif;
   font-weight: 500;
@@ -412,12 +488,15 @@ p {
   color: var(--secondary-text-color);
 }
 .portfolio-text {
+  padding: 63px 24px;
+  /* width: 322px; */
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 28px;
   letter-spacing: 0.03em;
   color: var(--button-white-text);
+  background-color: var(--accent-color);
 }
 .portfolio .current {
   color: var(--button-white-text);
@@ -430,17 +509,20 @@ p {
   flex-wrap: wrap;
 }
 
+/* сетка в портфолио  margin-right: 30px; */
 .portfolio .item {
-  width: 370px;
+  width: calc((100% - 30px * 2) / 3);
   margin-right: 30px;
-  margin-bottom: 30px;
 }
+
 .portfolio .item:nth-child(3n) {
+  margin-right: 0;
+
+}
+/*.portfolio .item:nth-child(3n) {
   margin-right: 0;
 }
 .portfolio .item:nth-child(-n + 3) {
-  margin-bottom: 0;
+  margin-bottom: 0; */
 }
-.conteiner .portfolio {
-  margin-bottom: 94px;
-}
+
