--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ html {
   --hero-white-color: #ffffff;
   --portfolio-background: rgba(33, 150, 243, 0.9);
   --button-white-text: #ffffff;
-  --fotter-background-color: #2F303A;
+  --fotter-background-color: #2f303a;
 }
 
 body {
@@ -44,7 +44,7 @@ body {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  }
+}
 
 /* общие сбросы */
 .link {
@@ -73,7 +73,7 @@ p {
 /* черта под шапкой */
 
 .header {
-  border-bottom: 1px solid #ECECEC;;
+  border-bottom: 1px solid #ececec;
 }
 /* лого */
 .logo {
@@ -139,7 +139,6 @@ p {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
-  
 
   color: var(--secondary-text-color);
   font-style: normal;
@@ -162,12 +161,12 @@ p {
 }
 
 /* герой */
-.hero {  
+.hero {
   max-width: 1600px;
   margin-left: auto;
   margin-right: auto;
   text-align: center;
-  }
+}
 
 .conteiner-hero {
   padding-top: 200px;
@@ -175,7 +174,7 @@ p {
   padding-left: 452px;
   padding-right: 452px;
   background-color: var(--secondary-text-color);
-  }
+}
 
 /* заголовок герой */
 .hero-title {
@@ -187,8 +186,8 @@ p {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--hero-white-color);
-  }
-  
+}
+
 /* кнопка заказать и подписаться */
 .button {
   color: var(--hero-white-color);
@@ -206,10 +205,10 @@ p {
 
 /* секция преимущества */
 .features-list {
-  display: flex;  
-  padding-top:94px;
+  display: flex;
+  padding-top: 94px;
   padding-bottom: 94px;
-  }
+}
 
 .features-list .item + .item {
   margin-left: 30px;
@@ -254,7 +253,7 @@ p {
 /* секция чем мы занимаемся */
 .section-activity.conteiner {
   padding-bottom: 94px;
-  }
+}
 .section-activity .activity-title {
   font-style: normal;
   font-weight: bold;
@@ -280,7 +279,7 @@ p {
   justify-content: center;
 }
 .activity-list .item {
-  width: calc((100% - 60px) / 3 );
+  width: calc((100% - 60px) / 3);
   margin-left: 30px;
 }
 .activity-list .item:nth-last-child(3n) {
@@ -288,17 +287,17 @@ p {
 }
 .activity-list .item {
   text-align: center;
-  background-color: rgba(47, 48, 58, 0.8);;
+  background-color: rgba(47, 48, 58, 0.8);
 }
 /* секция команда */
 .section-team .conteiner {
   padding-top: 94px;
   padding-bottom: 94px;
-  background-color: var(--section-background-color);                                     
+  background-color: var(--section-background-color);
 }
 
 .team-list {
-  display: flex;    
+  display: flex;
 }
 .section-team .team-title {
   font-style: normal;
@@ -321,7 +320,7 @@ p {
   font-size: 16px;
   line-height: 19px;
   letter-spacing: 0.03em;
-  text-align: center
+  text-align: center;
 }
 .section-team .team-aside {
   color: var(--secondary-text-color);
@@ -341,7 +340,7 @@ p {
 .team-aside {
   margin-bottom: 16px;
 }
- 
+
 /* клиенты */
 .section-clients .clients-title {
   font-style: normal;
@@ -370,9 +369,9 @@ p {
 .features-img {
   width: 170px;
   height: 90px;
-  }
+}
 
-  .clients-list .item {
+.clients-list .item {
   width: calc((100% - 30px * 4) / 5);
   margin-right: 30px;
 }
@@ -399,7 +398,7 @@ p {
   line-height: 24px;
   letter-spacing: 0.03em;
   color: var(--hero-white-color);
-  flex-direction: column;  
+  flex-direction: column;
 }
 .address-footer .contacts {
   color: rgba(255, 255, 255, 0.6);
@@ -434,10 +433,10 @@ p {
   line-height: 36px;
   letter-spacing: 0.06em;
 }
-.portfolio-gallery .conteiner{
+.portfolio-gallery .conteiner {
   padding-top: 94px;
   padding-bottom: 94px;
-  }
+}
 /* скрытый заголовок портфолио */
 .portfolio-title-hidden {
   display: none;
@@ -446,8 +445,8 @@ p {
 .btn {
   margin-bottom: 50px;
   display: flex;
-  justify-content: center;  
-  }
+  justify-content: center;
+}
 
 .btn .portfolio-button {
   font-family: Roboto, sans-serif;
@@ -517,12 +516,15 @@ p {
 
 .portfolio .item:nth-child(3n) {
   margin-right: 0;
-
 }
+
 /*.portfolio .item:nth-child(3n) {
   margin-right: 0;
 }
 .portfolio .item:nth-child(-n + 3) {
-  margin-bottom: 0; */
-}
+  margin-bottom: 0;
+} */
 
+.conteiner-portfolio:nth-last-child(n + 6) {
+  margin-bottom: 30px;
+}
