--- a/css/style.css
+++ b/css/style.css
@@ -504,6 +504,7 @@ p {
   background-color: var(--section-background-color);
   border-radius: 4px;
   border: transparent;
+  outline: none;
 }
 .btn-item {
   margin-left: 8px;
@@ -515,6 +516,9 @@ p {
 .portfolio-button:focus {
   color: var(--button-white-text);
   background-color: var(--accent-color);
+}
+.portfolio-button::-moz-focus-inner {
+  border: none;
 }
 
 .portfolio-title {
