--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/* цвет заголовков #212121 */
+﻿/* цвет заголовков #212121 */
 /* цвет вторичного текста #757575 */
 /* основной фон #E5E5E5 */
 /* фон секций #F5F4FA */
